# trpg

./: .gitignore  Cargo.toml  README.md  bun.lockb  index.html  package.json
action-trpg-lib/: Entity.ts  README.md  Schema.ts  World.ts  bun.lockb  index.ts  package.json
action-trpg-lib/ActionSystem/: Action.ts  ActionSystem.test.ts  ActionSystem.ts  (+3 more)
archetype/: Cargo.toml
archetype_tests/: Cargo.toml
assets/: index-BI3LctNu.js  index-BK_VwHiC.css  index-BdrQZ5Kr.js  index-CSezxjuQ.css  index-DSCsOXff.js  index-De7AS08Z.css  index-DmLpH-e_.js  index-Yw0f5TSz.css  index-ltWCFuz-.js
bitecs-helpers/: README.md  build.mjs  bun.lockb  package.json
bitecs-lib/: README.md  bun.lockb  package.json
custom-tools/: Cargo.toml
ecs/: Cargo.toml
ecs-macro/: Cargo.toml  STYLE.md
miniplex-lib/: README.md  bun.lockb  package.json
raw-lib/: LICENSE  README.md  package.json
secador/: Cargo.toml  README.md
secador-macro/: Cargo.toml
secador-macro/src/: dryer.rs  field_value_wrap.rs  field_wrap.rs  fn_arg_wrap.rs  lib.rs  outer_attribute_wrap.rs  path_ends_with.rs  seca.rs  secador_macro.rs  secador_multi_macro.rs  substitution_tuple.rs  substitutor.rs  try_to_macro.rs
secador/src/: lib.rs
secador/src/tests/: mod.rs
secador/src/tests/test1/: glad.rs  happy.rs  mad.rs  origin.rs  sad.rs
secador/src/tests/test_multi_line/: glad.rs  happy.rs  mad.rs  sad.rs
secador/src/tests/test_single_line/: glad.rs  happy.rs  mad.rs  sad.rs
server/: Cargo.toml
trpg-lib/: README.md  bun.lockb  package.json
web-trpg/: bun.lockb  index.html  package.json  vite.config.ts
(+514 files in other folders)
