[package]
name = "secador-macro"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Proc macros for secador crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
structmeta = "0.3.0"
syn = { version = "2.0.103", features = ["fold", "full", "derive"] }
